--- a/testeTicketTech/Views/Chamados/Editar.cshtml
+++ b/testeTicketTech/Views/Chamados/Editar.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Editar Chamado";
 }
 
-<div class="container bg-gradient p-5 rounded-5">
+<div class="container  p-5">
     <div class="mb-5 text-center">
         <h1>Edição de Chamados</h1>
     </div>
