--- a/testeTicketTech/Views/Shared/_LayoutPublic.cshtml
+++ b/testeTicketTech/Views/Shared/_LayoutPublic.cshtml
@@ -5,8 +5,10 @@
     <title>@ViewData["Title"] - TicketTech</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/Flatly.css" asp-append-version="true" />
+    <!-- 🔽 Adicione esta linha -->
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
-<body>
+<body class="fullwidth-page">
     <div class="container mt-5">
         @RenderBody()
     </div>
