--- a/testeTicketTech/Views/Usuario/Index.cshtml
+++ b/testeTicketTech/Views/Usuario/Index.cshtml
@@ -24,7 +24,7 @@
         </div>
     }
 
-    <table id="minhaTabela" class="table table-hover">
+    <table id="minhaTabela" class="table table-hover tabela-chamados">
         <thead>
             <tr>
                 <th>#</th>
