--- a/testeTicketTech/Views/Chamados/Cadastrar.cshtml
+++ b/testeTicketTech/Views/Chamados/Cadastrar.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Cadastrar Novo Chamado";
 }
 
-<div class="container bg-gradient p-5 rounded-5">
+<div class="container p-5 ">
     <div class="mb-5 text-center">
         <h1>Cadastro de Chamados</h1>
     </div>
