--- a/testeTicketTech/Views/Shared/_Layout.cshtml
+++ b/testeTicketTech/Views/Shared/_Layout.cshtml
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="~/testeTicketTech.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.datatables.net/v/dt/dt-2.3.4/datatables.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+
 </head>
-<body>
+<body class="fullwidth-page">
+
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-primary border-bottom box-shadow mb-3">
             <div class="container-fluid">
