--- a/testeTicketTech/Views/Chamados/Visualizar.cshtml
+++ b/testeTicketTech/Views/Chamados/Visualizar.cshtml
@@ -92,11 +92,9 @@
 
             <div class="mb-4">
                 <label class="fw-bold text-white fs-5">
-                    <i class="bi bi-exclamation-triangle me-2"></i>Sintomas:
+                    <i class="bi bi-geo-alt me-2"></i>Sintomas:
                 </label>
-                <div class="alert alert-warning ms-4">
-                    <p class="mb-0">@Model.Sintomas</p>
-                </div>
+                <p class="fs-5 ms-4">@Model.Sintomas</p>
             </div>
 
             <div class="mb-4">
